--- a/ex01.html
+++ b/ex01.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo</title>
+    <title>Jogo Simples</title>
+    <link rel="stylesheet" href="ex01.css">
 </head>
 <body>
-    <script rel="text/javascript" src="../js/ex01.js"></script>
-    <script rel="text/css" src="../css/ex01.css"></script>
-
-    <div class="pai">
+    <div id="pai">
         <h1>Jogo de Adivinhação</h1>
-        <p>Tente adivinhar o número</p>
-        <input type="number" id="n" placeholder="Digite" min="1" max="100">
-        <button onclick="verif()">Chutar</button>
-        <p id="mensagem"></p>
+        <p>Se divirta.</p>
     </div>
-
+    <script src="ex01.js"></script>
 </body>
 </html>
