--- a/ex01.html
+++ b/ex01.html
@@ -8,7 +8,8 @@
 <body>
     <div id="pai">
         <h1>Jogo de Adivinhação</h1>
-        <p>Se divirta.</p>
+        <p>Clique para começar</p>
+        <button id="botao">iniciar</button>
     </div>
     <script src="ex01.js"></script>
 </body>
