--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="pai">
         <h1>Jogo de Adivinhação</h1>
         <p>Clique para começar</p>
-        <button class="botao">iniciar</button>
+        <button id="button">iniciar</button>
     </div>
     <script src="ex01.js"></script>
 </body>
